# defenx-nlp

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
defenx_nlp/: __init__.py  device.py  encoder.py  interfaces.py  preprocessing.py  utils.py
docs/: api_reference.md
examples/: basic_usage.py  batch_encoding.py
tests/: test_encoder.py
