# setup.cfg — supplementary setuptools configuration
# Most metadata is in pyproject.toml (PEP 621).
# This file handles options that setuptools still reads from setup.cfg.

[options]
zip_safe = False

[options.package_data]
defenx_nlp =
    py.typed          # PEP 561 marker — tells mypy the package ships type stubs

[flake8]
max-line-length = 100
extend-ignore   = E203, W503
